fix tooltip flicker with tooltip.height

--- a/examples/style/style.scss
+++ b/examples/style/style.scss
@@ -7,9 +7,12 @@
 	width: 60px;
 	height: 30px;
 	position: absolute;
-	background-color: lightgrey;
 	text-align: center;
 	vertical-align: middle;
+	background-color: ChartistHtml.ChartManager.prototype._addColoring[this];
+	border-color: white;
+	border-style: solid;
+	border-width: 3px;
 
 	h1 {
 		font-size: 10px;
